--- a/contact.html
+++ b/contact.html
@@ -288,16 +288,16 @@
 					<div class="col-12 col-sm-6 pt-0 pt-lg-2">
 						<div class="contact-head"><i class="fas fa-mobile-alt contact-fa"></i> Mobile Number:</div>
 						<div class="contact-info">
-							<div class="pb-sm-3 pb-2"><a href="tel:+" class="contact-call"><span class="btn btn-primary contact-us-btn"><i class="fas fa-phone-alt"></i></span> +91 9999999999</a><br></div>
-							<div class="pb-sm-3 pb-2"><a href="tel:+" class="contact-call"><span class="btn btn-primary contact-us-btn"><i class="fas fa-phone-alt"></i></span> +91 9999999999</a><br></div>
-							<div class="pb-sm-3 pb-2"><a href="tel:+" class="contact-call"><span class="btn btn-success contact-us-whatsapp"><i class="fab fa-whatsapp"></i></span> +91 9999999999</a><br></div>
+							<div class="pb-sm-3 pb-2"><a href="tel:+919422430226" class="contact-call"><span class="btn btn-primary contact-us-btn"><i class="fas fa-phone-alt"></i></span> +91 9422430226</a><br></div>
+							<div class="pb-sm-3 pb-2"><a href="tel:+919561983034" class="contact-call"><span class="btn btn-primary contact-us-btn"><i class="fas fa-phone-alt"></i></span> +91 9561983034</a><br></div>
+							<div class="pb-sm-3 pb-2"><a href="https://wa.me/919561983034" class="contact-call"><span class="btn btn-success contact-us-whatsapp"><i class="fab fa-whatsapp"></i></span> +91 9561983034</a><br></div>
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 pt-0 pt-lg-2">
 						<div class="contact-head"><i class="far fa-envelope contact-fa"></i> Email Address:</div>
-						<div class="contact-info">email@gmail.com</div>
+						<div class="contact-info">shubham@preranaenterprises.in</div>
 						<div class="contact-head"><i class="fas fa-store-alt contact-fa"></i> Address:</div>
-						<div class="contact-info">Address... <br>Address...</div>
+						<div class="contact-info">At Gavhe,Post & Tal. Dapoli,<br>Dist. Ratnagiri</div>
 					</div>
 				</div>
 
