--- a/services.html
+++ b/services.html
@@ -676,25 +676,25 @@
 					<div class="ml-sm-3 ml-0 mb-3 footer-head text-left"><b>Reach Out To Us</b></div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-1 text-sm-right text-left"><i class="far fa-id-card"></i></div>
-						<div class="col-sm-10 col-9 mb-2">Name Surname<br>Name Surname</div>
+						<div class="col-sm-10 col-9 mb-2">Anand Karmarkar<br>Shubham Karmarkar</div>
 					</div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-1 text-sm-right text-left"><i class="fas fa-mobile-alt"></i></div>
-						<div class="col-sm-10 col-9 mb-2">9999999999<br>9999999999</div>
+						<div class="col-sm-10 col-9 mb-2">+91 9422430226<br>+91 9561983034</div>
 					</div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-1 text-sm-right text-left"><i class="far fa-envelope"></i></div>
-						<div class="col-sm-10 col-9 mb-2">email.email.com</div>
+						<div class="col-sm-10 col-9 mb-2">shubham@preranaenterprises.in</div>
 					</div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-1 text-sm-right text-left"><i class="fas fa-store-alt"></i></div>
-						<div class="col-sm-10 col-9 mb-2 footer-address">Address..., Address..., Address...,<br>Address..., Address..., Address...</div>
+						<div class="col-sm-10 col-9 mb-2 footer-address">At Gavhe,<wbr>Post & Tal. Dapoli,<br>Dist. Ratnagiri</div>
 					</div>
 					<div class="text-center text-md-left pb-2 pl-md-5">
-						<a href="#" class="btn btn-success py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social"><i class="fab fa-whatsapp"></i></a>
-						<a href="#" class="btn btn-light py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social"><i class="fas fa-map-marker-alt"></i></a>
-						<a href="#" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-linkedin text-white"><i class="fab fa-linkedin-in"></i></a>
-						<a href="#" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-facebook text-white"><i class="fab fa-facebook"></i></a>
+						<a href="https://wa.me/919561983034" class="btn btn-success py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social"><i class="fab fa-whatsapp"></i></a>
+						<a href="https://g.page/prerana-enterprises-dapoli?share" class="btn btn-light py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social"><i class="fas fa-map-marker-alt"></i></a>
+						<a href="https://www.facebook.com/pedapoli/" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-linkedin text-white"><i class="fab fa-linkedin-in"></i></a>
+						<a href="https://www.linkedin.com/company/68643143/admin/" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-facebook text-white"><i class="fab fa-facebook"></i></a>
 					</div>
 				</div>
 
