--- a/index.html
+++ b/index.html
@@ -816,10 +816,15 @@
 			    <li data-target="#testimonials" data-slide-to="0" class="active"></li>
 			    <li data-target="#testimonials" data-slide-to="1"></li>
 			    <li data-target="#testimonials" data-slide-to="2"></li>
+			    <li data-target="#testimonials" data-slide-to="3"></li>
 			</ol>
 	        <div class="carousel-inner" role="listbox">
+	            <div class="carousel-item active text-center p-4">
+	            	<h5 class="testimonial-height" id="longest">Supported our business since initial stage and also suggested varous innovative, suitable packaging ideas.<wbr> Effort on product development is noticable.<wbr> Helpful in all aspects.<wbr> It's a long-term association!</h5>
+	                <p class="testimonial-name">- <b class="cite"><i>Akar Pot Art</i></b><br></p>
+	            </div>
 	        	<div class="carousel-item active text-center p-4">
-	            	<h5 class="testimonial-height" id="longest">In time delivery and in good condition too!<wbr> We appreciate the quality and service provided by Prerana Enterprises who provided the same quality material in time for more than 10 years</h5>
+	            	<h5 class="testimonial-height">In time delivery and in good condition too!<wbr> We appreciate the quality and service provided by Prerana Enterprises who provided the same quality material in time for more than 10 years</h5>
 	                <p class="testimonial-name">- <b class="cite"><i>Delight Bulb Industry</i></b><br></p>
 	            </div>
 	            <div class="carousel-item active text-center p-4">
@@ -953,8 +958,8 @@
 					<div class="text-center text-md-left pb-2 pl-md-5">
 						<a href="https://wa.me/919561983034" class="btn btn-success py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social"><i class="fab fa-whatsapp"></i></a>
 						<a href="https://g.page/prerana-enterprises-dapoli?share" class="btn btn-light py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social"><i class="fas fa-map-marker-alt"></i></a>
-						<a href="https://www.facebook.com/pedapoli/" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-linkedin text-white"><i class="fab fa-linkedin-in"></i></a>
-						<a href="https://www.linkedin.com/company/68643143/admin/" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-facebook text-white"><i class="fab fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/company/68643143/admin/" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-linkedin text-white"><i class="fab fa-linkedin-in"></i></a>
+						<a href="https://www.facebook.com/pedapoli/" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-facebook text-white"><i class="fab fa-facebook"></i></a>
 					</div>
 				</div>
 
