--- a/services.html
+++ b/services.html
@@ -693,8 +693,8 @@
 					<div class="text-center text-md-left pb-2 pl-md-5">
 						<a href="https://wa.me/919561983034" class="btn btn-success py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social"><i class="fab fa-whatsapp"></i></a>
 						<a href="https://g.page/prerana-enterprises-dapoli?share" class="btn btn-light py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social"><i class="fas fa-map-marker-alt"></i></a>
-						<a href="https://www.facebook.com/pedapoli/" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-linkedin text-white"><i class="fab fa-linkedin-in"></i></a>
-						<a href="https://www.linkedin.com/company/68643143/admin/" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-facebook text-white"><i class="fab fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/company/68643143/admin/" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-linkedin text-white"><i class="fab fa-linkedin-in"></i></a>
+						<a href="https://www.facebook.com/pedapoli/" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-facebook text-white"><i class="fab fa-facebook"></i></a>
 					</div>
 				</div>
 
