--- a/services.html
+++ b/services.html
@@ -515,11 +515,11 @@
 				<div class="px-auto overflow-hidden service-data" id="service5">
 					<div class="position-absolute service-try d-block" id="try5"></div>
 					<div class="row pt-5">
-						<div class="services-circle text-center mx-auto d-block"><div class="col-12 text-center services-icon my-auto"><i class="fas fa-apple-alt"></i></div></div>
-						<div class="col-12 px-3 text-center services-title my-0"><label for="expand1">Cartons for Food</label></div>
+						<div class="services-circle text-center mx-auto d-block"><div class="col-12 text-center services-icon my-auto"><i class="fas fa-rupee-sign"></i></div></div>
+						<div class="col-12 px-3 text-center services-title my-0"><label for="expand1">Affordable Solutions</label></div>
 					</div>
 
-					<div class="container text-center services-para pt-lg-4 py-2 service-no pb-sm-5">We provide high quality corrugated boxes for your fruits and vegetables with perfect ventilation.</div>
+					<div class="container text-center services-para pt-lg-4 py-2 service-no pb-sm-5">We suggest innovative solutions as per your products & requirements at affordable price.</div>
 				</div>
 			</div>
 			
@@ -531,11 +531,11 @@
 				<div class="px-auto overflow-hidden service-data" id="service6">
 					<div class="position-absolute service-try d-block" id="try6"></div>
 					<div class="row pt-5">
-						<div class="services-circle text-center mx-auto d-block"><div class="col-12 text-center services-icon my-auto"><i class="fas fa-apple-alt"></i></div></div>
-						<div class="col-12 px-3 text-center services-title my-0"><label for="expand1">Cartons for Food</label></div>
+						<div class="services-circle text-center mx-auto d-block"><div class="col-12 text-center services-icon my-auto"><i class="fas fa-truck-moving"></i></div></div>
+						<div class="col-12 px-3 text-center services-title my-0"><label for="expand1">Timely Delivery</label></div>
 					</div>
 
-					<div class="container text-center services-para pt-lg-4 py-2 service-no pb-sm-5">We provide high quality corrugated boxes for your fruits and vegetables with perfect ventilation.</div>
+					<div class="container text-center services-para pt-lg-4 py-2 service-no pb-sm-5">We understand that punctuality is the most important factor for any business. We deliver your goods on time as we have transport vehicle of our own.</div>
 				</div>
 			</div>
 			
