--- a/services.html
+++ b/services.html
@@ -487,7 +487,7 @@
 						<div class="col-12 px-3 text-center services-title my-0"><label for="expand1">Finest Corrugated Sheets</label></div>
 					</div>
 
-					<div class="container text-center services-para pt-lg-4 py-2 service-no pb-sm-5">We provide exclusive corrugated sheets as per your required size and specifications. Our size range is __ to __.</div>
+					<div class="container text-center services-para pt-lg-4 py-2 service-no pb-sm-5">We provide exclusive corrugated sheets as per your required size and specifications. Our size range is upto 72".</div>
 				</div>
 			</div>
 			
