--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
 	        <div class="carousel-inner" role="listbox">
 	            <div class="carousel-item active text-center p-4">
 	            	<h5 class="testimonial-height" id="longest">Supported our business since initial stage and also suggested varous innovative, suitable packaging ideas.<wbr> Effort on product development is noticable.<wbr> Helpful in all aspects.<wbr> It's a long-term association!</h5>
-	                <p class="testimonial-name">- <b class="cite"><i>Akar Pot Art</i></b><br></p>
+	                <p class="testimonial-name">- <b class="cite"><i>Aakar Pot Art</i></b><br></p>
 	            </div>
 	        	<div class="carousel-item active text-center p-4">
 	            	<h5 class="testimonial-height">In time delivery and in good condition too!<wbr> We appreciate the quality and service provided by Prerana Enterprises who provided the same quality material in time for more than 10 years</h5>
