--- a/about.html
+++ b/about.html
@@ -426,7 +426,7 @@
 			</div>
 		</div>
 		<div class="col-12 col-md-5 col-lg-4 boom-opacity">
-			<div class="about-pic-div"><img src="images/sky_spare.jpg" alt="Anand Karmarkar" class="about-pic"></div>
+			<div class="about-pic-div"><img src="images/favicon.png" alt="Anand Karmarkar" class="about-pic"></div>
 		</div>
 	</div>
 </div>
