--- a/about.html
+++ b/about.html
@@ -448,6 +448,20 @@
 				document.getElementById('pop-submit').innerHTML = 'Submit';
 			}
 		</script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-178557617-1"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-178557617-1');
+		</script>
 	</head>
 	<body>
 		<!-- Google Tag Manager (noscript) -->
